@@ -65,6 +65,10 @@ int main()
     }
     
     client = ce->ft->connect(ce, cim_host , "http", cim_host_port, cim_host_userid, cim_host_passwd , &status);
+    if (client == NULL) {
+	printf("Coudn't connect to the server. Check if sfcb is running.\n");
+	return 1;
+    }
 
     op = ce->ft->newObjectPath(ce, "root/cimv2", NULL , &status); 
     
