@@ -12,6 +12,7 @@ Bugs:
 - 2348900: Concurrency issue when parsing responses
 - 2793377: Missing includes
 - 3101151: SfcbLocal failed to connect due to hardcoded library path
+- 3195267: sfcc v2 tests segfault when sfcb is not running
 
 Changes in 2.2.1
 ================
